# block-breaker

./: CMakeLists.txt  README.md  loop.c  main.c
headers/: defines.h  loop.h  structs.h
headers/displays/: display_menus.h
headers/displays/map/: display_map.h
headers/game/: game.h
headers/includes/: colors.h  defines.h  enums.h  structs.h
headers/player/: init_player.h
headers/player/ball/: init_ball.h  move_ball.h
headers/player/map/: init_block.h  init_map.h
headers/player/platform/: init_platform.h  update_platform_pos.h
headers/utils/: set_unicode.h  utils.h
sources/displays/: display_menus.c
sources/displays/map/: display_map.c
sources/game/: game.c
sources/player/: init_player.c
sources/player/ball/: ball_directions.h  init_ball.c  move_ball.c
sources/player/map/: init_block.c  init_map.c
sources/player/platform/: init_platform.c  update_platform_pos.c
sources/utils/: set_unicode.c  utils.c
